--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Pokemons</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
 </head>
 
 <body>
